--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -111,14 +111,18 @@
   },
   "links": {
     "done": "Done!",
-    "share": "Share your poll",
+    "share": "Share your poll with the title:",
     "invite": "You can invite others to your poll with this link.",
     "loosingLink": "ATTENTION: If this link is not saved, it will be lost.",
     "copy": "Copy link",
     "open": "open",
     "change": "You can change your poll with this link.",
     "satisfactionSurvey": "How satisfied is our service? Do you have any suggestions for making the service more enjoyable? We would be pleased if you would let us know your opinion with a few clicks. Your feedback will be collected by the development team at Dataport AöR.",
-    "satisfactionSurveyButton": "Go to survey"
+    "satisfactionSurveyButton": "Go to survey",
+    "email": {
+      "send": "Send mail",
+      "participate": "Would you like to attend the event? Great! Then choose a date option under:"
+    }
   },
   "password": {
     "password": "Password",
