--- a/src/locales/test.json
+++ b/src/locales/test.json
@@ -115,6 +115,7 @@
     "invite": ".",
     "loosingLink": ".",
     "copy": ".",
+    "email": ".",
     "open": ".",
     "change": ".",
     "satisfactionSurvey": ".",
